aws-cloudformation/cloudformation.json
{
    "Parameters": {
     "secretsarn": {
      "Type": "String",
      "Default": "arn:aws:secretsmanager:ap-southeast-1:<ACCOUNT_NUMBER>:secret:<NAME>",
      "Description": "The arn of the secrets",
      "NoEcho": false
     },
     "SsmParameterValueawsserviceecsoptimizedamiamazonlinux2recommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id"
     }
    },
    "Resources": {
     "murogptvpcA5BD7541": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
       "CidrBlock": "10.0.0.0/16",
       "EnableDnsHostnames": true,
       "EnableDnsSupport": true,
       "InstanceTenancy": "default",
       "Tags": [
        {
         "Key": "Name",
         "Value": "murogpt-vpc"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/Resource"
      }
     },
     "murogptvpcpublicSubnetSubnet1SubnetCF499EB9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "AvailabilityZone": "ap-southeast-1a",
       "CidrBlock": "10.0.0.0/20",
       "MapPublicIpOnLaunch": true,
       "Tags": [
        {
         "Key": "aws-cdk:subnet-name",
         "Value": "publicSubnet"
        },
        {
         "Key": "aws-cdk:subnet-type",
         "Value": "Public"
        },
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1/Subnet"
      }
     },
     "murogptvpcpublicSubnetSubnet1RouteTable47B5DB8D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1/RouteTable"
      }
     },
     "murogptvpcpublicSubnetSubnet1RouteTableAssociation0C7C6ACE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": {
        "Ref": "murogptvpcpublicSubnetSubnet1RouteTable47B5DB8D"
       },
       "SubnetId": {
        "Ref": "murogptvpcpublicSubnetSubnet1SubnetCF499EB9"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1/RouteTableAssociation"
      }
     },
     "murogptvpcpublicSubnetSubnet1DefaultRouteED3BE949": {
      "Type": "AWS::EC2::Route",
      "Properties": {
       "DestinationCidrBlock": "0.0.0.0/0",
       "GatewayId": {
        "Ref": "murogptvpcIGWE34476CC"
       },
       "RouteTableId": {
        "Ref": "murogptvpcpublicSubnetSubnet1RouteTable47B5DB8D"
       }
      },
      "DependsOn": [
       "murogptvpcVPCGWA09887FF"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1/DefaultRoute"
      }
     },
     "murogptvpcpublicSubnetSubnet1EIP134D199B": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
       "Domain": "vpc",
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1/EIP"
      }
     },
     "murogptvpcpublicSubnetSubnet1NATGateway5474B173": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
       "AllocationId": {
        "Fn::GetAtt": [
         "murogptvpcpublicSubnetSubnet1EIP134D199B",
         "AllocationId"
        ]
       },
       "SubnetId": {
        "Ref": "murogptvpcpublicSubnetSubnet1SubnetCF499EB9"
       },
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1"
        }
       ]
      },
      "DependsOn": [
       "murogptvpcpublicSubnetSubnet1DefaultRouteED3BE949",
       "murogptvpcpublicSubnetSubnet1RouteTableAssociation0C7C6ACE"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet1/NATGateway"
      }
     },
     "murogptvpcpublicSubnetSubnet2Subnet993B59A9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "AvailabilityZone": "ap-southeast-1b",
       "CidrBlock": "10.0.16.0/20",
       "MapPublicIpOnLaunch": true,
       "Tags": [
        {
         "Key": "aws-cdk:subnet-name",
         "Value": "publicSubnet"
        },
        {
         "Key": "aws-cdk:subnet-type",
         "Value": "Public"
        },
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet2"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet2/Subnet"
      }
     },
     "murogptvpcpublicSubnetSubnet2RouteTableB86807E5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet2"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet2/RouteTable"
      }
     },
     "murogptvpcpublicSubnetSubnet2RouteTableAssociation381F13FA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": {
        "Ref": "murogptvpcpublicSubnetSubnet2RouteTableB86807E5"
       },
       "SubnetId": {
        "Ref": "murogptvpcpublicSubnetSubnet2Subnet993B59A9"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet2/RouteTableAssociation"
      }
     },
     "murogptvpcpublicSubnetSubnet2DefaultRoute5A675314": {
      "Type": "AWS::EC2::Route",
      "Properties": {
       "DestinationCidrBlock": "0.0.0.0/0",
       "GatewayId": {
        "Ref": "murogptvpcIGWE34476CC"
       },
       "RouteTableId": {
        "Ref": "murogptvpcpublicSubnetSubnet2RouteTableB86807E5"
       }
      },
      "DependsOn": [
       "murogptvpcVPCGWA09887FF"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/publicSubnetSubnet2/DefaultRoute"
      }
     },
     "murogptvpcegressSubnetSubnet1Subnet5B29F834": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "AvailabilityZone": "ap-southeast-1a",
       "CidrBlock": "10.0.32.0/20",
       "MapPublicIpOnLaunch": false,
       "Tags": [
        {
         "Key": "aws-cdk:subnet-name",
         "Value": "egressSubnet"
        },
        {
         "Key": "aws-cdk:subnet-type",
         "Value": "Private"
        },
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet1/Subnet"
      }
     },
     "murogptvpcegressSubnetSubnet1RouteTable5697A35A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet1/RouteTable"
      }
     },
     "murogptvpcegressSubnetSubnet1RouteTableAssociationD1AE9862": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": {
        "Ref": "murogptvpcegressSubnetSubnet1RouteTable5697A35A"
       },
       "SubnetId": {
        "Ref": "murogptvpcegressSubnetSubnet1Subnet5B29F834"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet1/RouteTableAssociation"
      }
     },
     "murogptvpcegressSubnetSubnet1DefaultRouteC8D09F1C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
       "DestinationCidrBlock": "0.0.0.0/0",
       "NatGatewayId": {
        "Ref": "murogptvpcpublicSubnetSubnet1NATGateway5474B173"
       },
       "RouteTableId": {
        "Ref": "murogptvpcegressSubnetSubnet1RouteTable5697A35A"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet1/DefaultRoute"
      }
     },
     "murogptvpcegressSubnetSubnet2Subnet4A94EDB1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "AvailabilityZone": "ap-southeast-1b",
       "CidrBlock": "10.0.48.0/20",
       "MapPublicIpOnLaunch": false,
       "Tags": [
        {
         "Key": "aws-cdk:subnet-name",
         "Value": "egressSubnet"
        },
        {
         "Key": "aws-cdk:subnet-type",
         "Value": "Private"
        },
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet2"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet2/Subnet"
      }
     },
     "murogptvpcegressSubnetSubnet2RouteTable18D4548E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet2"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet2/RouteTable"
      }
     },
     "murogptvpcegressSubnetSubnet2RouteTableAssociationF6401CAE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": {
        "Ref": "murogptvpcegressSubnetSubnet2RouteTable18D4548E"
       },
       "SubnetId": {
        "Ref": "murogptvpcegressSubnetSubnet2Subnet4A94EDB1"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet2/RouteTableAssociation"
      }
     },
     "murogptvpcegressSubnetSubnet2DefaultRouteC86CD0C4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
       "DestinationCidrBlock": "0.0.0.0/0",
       "NatGatewayId": {
        "Ref": "murogptvpcpublicSubnetSubnet1NATGateway5474B173"
       },
       "RouteTableId": {
        "Ref": "murogptvpcegressSubnetSubnet2RouteTable18D4548E"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/egressSubnetSubnet2/DefaultRoute"
      }
     },
     "murogptvpcisolatedSubnetSubnet1Subnet6781750D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "AvailabilityZone": "ap-southeast-1a",
       "CidrBlock": "10.0.64.0/20",
       "MapPublicIpOnLaunch": false,
       "Tags": [
        {
         "Key": "aws-cdk:subnet-name",
         "Value": "isolatedSubnet"
        },
        {
         "Key": "aws-cdk:subnet-type",
         "Value": "Isolated"
        },
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet1/Subnet"
      }
     },
     "murogptvpcisolatedSubnetSubnet1RouteTable93AEF02E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet1/RouteTable"
      }
     },
     "murogptvpcisolatedSubnetSubnet1RouteTableAssociation9FB36EED": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": {
        "Ref": "murogptvpcisolatedSubnetSubnet1RouteTable93AEF02E"
       },
       "SubnetId": {
        "Ref": "murogptvpcisolatedSubnetSubnet1Subnet6781750D"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet1/RouteTableAssociation"
      }
     },
     "murogptvpcisolatedSubnetSubnet2SubnetBB6C4170": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
       "AvailabilityZone": "ap-southeast-1b",
       "CidrBlock": "10.0.80.0/20",
       "MapPublicIpOnLaunch": false,
       "Tags": [
        {
         "Key": "aws-cdk:subnet-name",
         "Value": "isolatedSubnet"
        },
        {
         "Key": "aws-cdk:subnet-type",
         "Value": "Isolated"
        },
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet2"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet2/Subnet"
      }
     },
     "murogptvpcisolatedSubnetSubnet2RouteTable1F835488": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet2"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet2/RouteTable"
      }
     },
     "murogptvpcisolatedSubnetSubnet2RouteTableAssociationFCC56803": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": {
        "Ref": "murogptvpcisolatedSubnetSubnet2RouteTable1F835488"
       },
       "SubnetId": {
        "Ref": "murogptvpcisolatedSubnetSubnet2SubnetBB6C4170"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/isolatedSubnetSubnet2/RouteTableAssociation"
      }
     },
     "murogptvpcIGWE34476CC": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
       "Tags": [
        {
         "Key": "Name",
         "Value": "murogpt-vpc"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/IGW"
      }
     },
     "murogptvpcVPCGWA09887FF": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
       "InternetGatewayId": {
        "Ref": "murogptvpcIGWE34476CC"
       },
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-vpc/VPCGW"
      }
     },
     "EntepriseSG8B5FF115": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
       "GroupDescription": "muro-chat/murogpt-Prod/murogpt-application/EntepriseSG",
       "GroupName": "murogpt-sg",
       "SecurityGroupEgress": [
        {
         "CidrIp": "0.0.0.0/0",
         "Description": "Allow all outbound traffic by default",
         "IpProtocol": "-1"
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/EntepriseSG/Resource"
      }
     },
     "EntepriseSGfrommurochatmurogptProdmurogptapplicationEntepriseSGE3DC88A420496F325C9C": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
       "Description": "Allow inbound connections to EFS from EnterpriseSG",
       "FromPort": 2049,
       "GroupId": {
        "Fn::GetAtt": [
         "EntepriseSG8B5FF115",
         "GroupId"
        ]
       },
       "IpProtocol": "tcp",
       "SourceSecurityGroupId": {
        "Fn::GetAtt": [
         "EntepriseSG8B5FF115",
         "GroupId"
        ]
       },
       "ToPort": 2049
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/EntepriseSG/from murochatmurogptProdmurogptapplicationEntepriseSGE3DC88A4:2049"
      }
     },
     "EntepriseSGfrommurochatmurogptProdmurogptapplicationmurogptlbSecurityGroup67154D1D80B716EB8D": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
       "Description": "Load balancer to target",
       "FromPort": 80,
       "GroupId": {
        "Fn::GetAtt": [
         "EntepriseSG8B5FF115",
         "GroupId"
        ]
       },
       "IpProtocol": "tcp",
       "SourceSecurityGroupId": {
        "Fn::GetAtt": [
         "murogptlbSecurityGroup5E553D7D",
         "GroupId"
        ]
       },
       "ToPort": 80
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/EntepriseSG/from murochatmurogptProdmurogptapplicationmurogptlbSecurityGroup67154D1D:80"
      }
     },
     "murogptlbF10A5BBC": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
       "LoadBalancerAttributes": [
        {
         "Key": "deletion_protection.enabled",
         "Value": "false"
        }
       ],
       "Scheme": "internet-facing",
       "SecurityGroups": [
        {
         "Fn::GetAtt": [
          "murogptlbSecurityGroup5E553D7D",
          "GroupId"
         ]
        }
       ],
       "Subnets": [
        {
         "Ref": "murogptvpcpublicSubnetSubnet1SubnetCF499EB9"
        },
        {
         "Ref": "murogptvpcpublicSubnetSubnet2Subnet993B59A9"
        }
       ],
       "Type": "application"
      },
      "DependsOn": [
       "murogptvpcpublicSubnetSubnet1DefaultRouteED3BE949",
       "murogptvpcpublicSubnetSubnet1RouteTableAssociation0C7C6ACE",
       "murogptvpcpublicSubnetSubnet2DefaultRoute5A675314",
       "murogptvpcpublicSubnetSubnet2RouteTableAssociation381F13FA"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-lb/Resource"
      }
     },
     "murogptlbSecurityGroup5E553D7D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
       "GroupDescription": "Automatically created Security Group for ELB murochatmurogptProdmurogptapplicationmurogptlb119E3962",
       "SecurityGroupIngress": [
        {
         "CidrIp": "0.0.0.0/0",
         "Description": "Allow from anyone on port 80",
         "FromPort": 80,
         "IpProtocol": "tcp",
         "ToPort": 80
        }
       ],
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-lb/SecurityGroup/Resource"
      }
     },
     "murogptlbSecurityGrouptomurochatmurogptProdmurogptapplicationEntepriseSGE3DC88A4801335C125": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
       "Description": "Load balancer to target",
       "DestinationSecurityGroupId": {
        "Fn::GetAtt": [
         "EntepriseSG8B5FF115",
         "GroupId"
        ]
       },
       "FromPort": 80,
       "GroupId": {
        "Fn::GetAtt": [
         "murogptlbSecurityGroup5E553D7D",
         "GroupId"
        ]
       },
       "IpProtocol": "tcp",
       "ToPort": 80
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-lb/SecurityGroup/to murochatmurogptProdmurogptapplicationEntepriseSGE3DC88A4:80"
      }
     },
     "murogptlbhttpLb7BB08EDF": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
       "DefaultActions": [
        {
         "TargetGroupArn": {
          "Ref": "murogptlbhttpLbhttptargetGroup11DD58A4"
         },
         "Type": "forward"
        }
       ],
       "LoadBalancerArn": {
        "Ref": "murogptlbF10A5BBC"
       },
       "Port": 80,
       "Protocol": "HTTP"
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-lb/http-Lb/Resource"
      }
     },
     "murogptlbhttpLbhttptargetGroup11DD58A4": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
       "HealthCheckPath": "/ping",
       "Matcher": {
        "HttpCode": "200"
       },
       "Port": 80,
       "Protocol": "HTTP",
       "TargetGroupAttributes": [
        {
         "Key": "stickiness.enabled",
         "Value": "false"
        }
       ],
       "TargetType": "instance",
       "VpcId": {
        "Ref": "murogptvpcA5BD7541"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-lb/http-Lb/http-targetGroup/Resource"
      }
     },
     "murogptasgInstanceRole70FD9110": {
      "Type": "AWS::IAM::Role",
      "Properties": {
       "AssumeRolePolicyDocument": {
        "Statement": [
         {
          "Action": "sts:AssumeRole",
          "Effect": "Allow",
          "Principal": {
           "Service": "ec2.amazonaws.com"
          }
         }
        ],
        "Version": "2012-10-17"
       },
       "ManagedPolicyArns": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::aws:policy/AmazonSSMManagedInstanceCore"
          ]
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::aws:policy/AmazonCognitoReadOnly"
          ]
         ]
        }
       ],
       "Tags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/InstanceRole/Resource"
      }
     },
     "murogptasgInstanceRoleDefaultPolicyDAC32E23": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
       "PolicyDocument": {
        "Statement": [
         {
          "Action": [
           "ecs:DeregisterContainerInstance",
           "ecs:RegisterContainerInstance",
           "ecs:Submit*"
          ],
          "Effect": "Allow",
          "Resource": {
           "Fn::GetAtt": [
            "murogptcluster7F7C4D91",
            "Arn"
           ]
          }
         },
         {
          "Action": [
           "ecs:Poll",
           "ecs:StartTelemetrySession"
          ],
          "Condition": {
           "ArnEquals": {
            "ecs:cluster": {
             "Fn::GetAtt": [
              "murogptcluster7F7C4D91",
              "Arn"
             ]
            }
           }
          },
          "Effect": "Allow",
          "Resource": "*"
         },
         {
          "Action": [
           "ecr:GetAuthorizationToken",
           "ecs:DiscoverPollEndpoint",
           "logs:CreateLogStream",
           "logs:PutLogEvents"
          ],
          "Effect": "Allow",
          "Resource": "*"
         }
        ],
        "Version": "2012-10-17"
       },
       "PolicyName": "murogptasgInstanceRoleDefaultPolicyDAC32E23",
       "Roles": [
        {
         "Ref": "murogptasgInstanceRole70FD9110"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/InstanceRole/DefaultPolicy/Resource"
      }
     },
     "murogptasgInstanceProfileDCF2FA0F": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
       "Roles": [
        {
         "Ref": "murogptasgInstanceRole70FD9110"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/InstanceProfile"
      }
     },
     "murogptasgLaunchTemplate5C9EA823": {
      "Type": "AWS::EC2::LaunchTemplate",
      "Properties": {
       "LaunchTemplateData": {
        "BlockDeviceMappings": [
         {
          "DeviceName": "/dev/xvda",
          "Ebs": {
           "VolumeSize": 160,
           "VolumeType": "gp3"
          }
         }
        ],
        "IamInstanceProfile": {
         "Arn": {
          "Fn::GetAtt": [
           "murogptasgInstanceProfileDCF2FA0F",
           "Arn"
          ]
         }
        },
        "ImageId": {
         "Ref": "SsmParameterValueawsserviceecsoptimizedamiamazonlinux2recommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter"
        },
        "InstanceType": "c5.4xlarge",
        "Monitoring": {
         "Enabled": false
        },
        "SecurityGroupIds": [
         {
          "Fn::GetAtt": [
           "EntepriseSG8B5FF115",
           "GroupId"
          ]
         }
        ],
        "TagSpecifications": [
         {
          "ResourceType": "instance",
          "Tags": [
           {
            "Key": "Name",
            "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/LaunchTemplate"
           }
          ]
         },
         {
          "ResourceType": "volume",
          "Tags": [
           {
            "Key": "Name",
            "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/LaunchTemplate"
           }
          ]
         }
        ],
        "UserData": {
         "Fn::Base64": {
          "Fn::Join": [
           "",
           [
            "#!/bin/bash\n#!/bin/bash\nmkdir -p /home/install/data/db && chmod -R 777 /home/install\necho ECS_CLUSTER=",
            {
             "Ref": "murogptcluster7F7C4D91"
            },
            " >> /etc/ecs/ecs.config\nsudo iptables --insert FORWARD 1 --in-interface docker+ --destination 169.254.169.254/32 --jump DROP\nsudo service iptables save\necho ECS_AWSVPC_BLOCK_IMDS=true >> /etc/ecs/ecs.config"
           ]
          ]
         }
        }
       },
       "TagSpecifications": [
        {
         "ResourceType": "launch-template",
         "Tags": [
          {
           "Key": "Name",
           "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/LaunchTemplate"
          }
         ]
        }
       ]
      },
      "DependsOn": [
       "murogptasgInstanceRoleDefaultPolicyDAC32E23",
       "murogptasgInstanceRole70FD9110"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/LaunchTemplate/Resource"
      }
     },
     "murogptasgASGCF69F626": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
       "AutoScalingGroupName": "murogpt-asg",
       "LaunchTemplate": {
        "LaunchTemplateId": {
         "Ref": "murogptasgLaunchTemplate5C9EA823"
        },
        "Version": {
         "Fn::GetAtt": [
          "murogptasgLaunchTemplate5C9EA823",
          "LatestVersionNumber"
         ]
        }
       },
       "MaxSize": "2",
       "MinSize": "1",
       "NewInstancesProtectedFromScaleIn": true,
       "Tags": [
        {
         "Key": "Name",
         "PropagateAtLaunch": true,
         "Value": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg"
        }
       ],
       "TargetGroupARNs": [
        {
         "Ref": "murogptlbhttpLbhttptargetGroup11DD58A4"
        }
       ],
       "VPCZoneIdentifier": [
        {
         "Ref": "murogptvpcpublicSubnetSubnet1SubnetCF499EB9"
        },
        {
         "Ref": "murogptvpcpublicSubnetSubnet2Subnet993B59A9"
        }
       ]
      },
      "UpdatePolicy": {
       "AutoScalingScheduledAction": {
        "IgnoreUnmodifiedGroupSizeProperties": true
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/ASG"
      }
     },
     "murogptasgScalingPolicyScaleOnHighCpuUtil1531EFA4": {
      "Type": "AWS::AutoScaling::ScalingPolicy",
      "Properties": {
       "AutoScalingGroupName": {
        "Ref": "murogptasgASGCF69F626"
       },
       "PolicyType": "TargetTrackingScaling",
       "TargetTrackingConfiguration": {
        "PredefinedMetricSpecification": {
         "PredefinedMetricType": "ASGAverageCPUUtilization"
        },
        "TargetValue": 75
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-asg/ScalingPolicyScaleOnHighCpuUtil/Resource"
      }
     },
     "murogptcluster7F7C4D91": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
       "ClusterName": "murogpt-cluster",
       "ClusterSettings": [
        {
         "Name": "containerInsights",
         "Value": "enabled"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-cluster/Resource"
      }
     },
     "murogptcluster6C690A4F": {
      "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
      "Properties": {
       "CapacityProviders": [
        {
         "Ref": "capacityprovider3257C9FE"
        }
       ],
       "Cluster": {
        "Ref": "murogptcluster7F7C4D91"
       },
       "DefaultCapacityProviderStrategy": [
        {
         "CapacityProvider": {
          "Ref": "capacityprovider3257C9FE"
         }
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/murogpt-cluster/murogpt-cluster"
      }
     },
     "capacityprovider3257C9FE": {
      "Type": "AWS::ECS::CapacityProvider",
      "Properties": {
       "AutoScalingGroupProvider": {
        "AutoScalingGroupArn": {
         "Ref": "murogptasgASGCF69F626"
        },
        "ManagedScaling": {
         "Status": "ENABLED",
         "TargetCapacity": 100
        },
        "ManagedTerminationProtection": "ENABLED"
       },
       "Name": "capacity_provider"
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/capacity_provider/capacity_provider"
      }
     },
     "gptfs2B1951B1": {
      "Type": "AWS::EFS::FileSystem",
      "Properties": {
       "BackupPolicy": {
        "Status": "ENABLED"
       },
       "Encrypted": true,
       "FileSystemTags": [
        {
         "Key": "Name",
         "Value": "gpt"
        }
       ]
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-fs/Resource"
      }
     },
     "gptfsEfsMountTargetegressSubnetSubnet10F89D91B": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
       "FileSystemId": {
        "Ref": "gptfs2B1951B1"
       },
       "SecurityGroups": [
        {
         "Fn::GetAtt": [
          "EntepriseSG8B5FF115",
          "GroupId"
         ]
        }
       ],
       "SubnetId": {
        "Ref": "murogptvpcegressSubnetSubnet1Subnet5B29F834"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-fs/EfsMountTarget-egressSubnetSubnet1"
      }
     },
     "gptfsEfsMountTargetegressSubnetSubnet2677F6E35": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
       "FileSystemId": {
        "Ref": "gptfs2B1951B1"
       },
       "SecurityGroups": [
        {
         "Fn::GetAtt": [
          "EntepriseSG8B5FF115",
          "GroupId"
         ]
        }
       ],
       "SubnetId": {
        "Ref": "murogptvpcegressSubnetSubnet2Subnet4A94EDB1"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-fs/EfsMountTarget-egressSubnetSubnet2"
      }
     },
     "gptap4925284E": {
      "Type": "AWS::EFS::AccessPoint",
      "Properties": {
       "AccessPointTags": [
        {
         "Key": "Name",
         "Value": "muro-chat/murogpt-Prod/murogpt-application/gpt-ap"
        }
       ],
       "FileSystemId": {
        "Ref": "gptfs2B1951B1"
       },
       "RootDirectory": {
        "CreationInfo": {
         "OwnerGid": "1000",
         "OwnerUid": "1000",
         "Permissions": "755"
        },
        "Path": "/gpt/mongodata"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-ap/Resource"
      }
     },
     "gpttdTaskRoleC84F9DF5": {
      "Type": "AWS::IAM::Role",
      "Properties": {
       "AssumeRolePolicyDocument": {
        "Statement": [
         {
          "Action": "sts:AssumeRole",
          "Effect": "Allow",
          "Principal": {
           "Service": "ecs-tasks.amazonaws.com"
          }
         }
        ],
        "Version": "2012-10-17"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/TaskRole/Resource"
      }
     },
     "gpttdA3F35940": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
       "ContainerDefinitions": [
        {
         "Cpu": 2048,
         "Environment": [
          {
           "Name": "MONGO_INITDB_ROOT_USERNAME",
           "Value": {
            "Fn::Join": [
             "",
             [
              "{{resolve:secretsmanager:",
              {
               "Ref": "secretsarn"
              },
              ":SecretString:MONGO_INITDB_ROOT_USERNAME::}}"
             ]
            ]
           }
          },
          {
           "Name": "MONGO_INITDB_ROOT_PASSWORD",
           "Value": {
            "Fn::Join": [
             "",
             [
              "{{resolve:secretsmanager:",
              {
               "Ref": "secretsarn"
              },
              ":SecretString:MONGO_INITDB_ROOT_PASSWORD::}}"
             ]
            ]
           }
          }
         ],
         "Essential": true,
         "HealthCheck": {
          "Command": [
           "CMD-SHELL",
           "curl --connect-timeout 10 --silent --show-error mongodb:27017 || exit 1"
          ],
          "Interval": 30,
          "Retries": 3,
          "Timeout": 5
         },
         "Hostname": "mongodb",
         "Image": "percona/percona-server-mongodb:4.4",
         "LogConfiguration": {
          "LogDriver": "awslogs",
          "Options": {
           "awslogs-group": {
            "Ref": "gpttdmongodbLogGroup443DFE77"
           },
           "awslogs-stream-prefix": "mongo-logs",
           "awslogs-region": "ap-southeast-1"
          }
         },
         "MemoryReservation": 2048,
         "MountPoints": [
          {
           "ContainerPath": "/data/db",
           "ReadOnly": false,
           "SourceVolume": "gpt-volume"
          }
         ],
         "Name": "mongodb",
         "PortMappings": [
          {
           "ContainerPort": 27017,
           "HostPort": 27017,
           "Protocol": "tcp"
          }
         ]
        },
        {
         "Cpu": 2048,
         "DependsOn": [
          {
           "Condition": "HEALTHY",
           "ContainerName": "mongodb"
          }
         ],
         "DockerLabels": {
          "com.centurylinklabs.watchtower.enable": "true"
         },
         "Environment": [
          {
           "Name": "SECRETS",
           "Value": {
            "Fn::Join": [
             "",
             [
              "{{resolve:secretsmanager:",
              {
               "Ref": "secretsarn"
              },
              ":SecretString:::}}"
             ]
            ]
           }
          }
         ],
         "Essential": true,
         "HealthCheck": {
          "Command": [
           "CMD-SHELL",
           "curl -f http://localhost:8001/api/u/meta || exit 1"
          ],
          "Interval": 30,
          "Retries": 3,
          "Timeout": 5
         },
         "Hostname": "murochat-backend",
         "Image": "public.ecr.aws/privado/murochat-backend:prod",
         "Links": [
          "mongodb"
         ],
         "LogConfiguration": {
          "LogDriver": "awslogs",
          "Options": {
           "awslogs-group": {
            "Ref": "gpttdmurochatbackendLogGroup7BDC7CDD"
           },
           "awslogs-stream-prefix": "backend-logs",
           "awslogs-region": "ap-southeast-1"
          }
         },
         "MemoryReservation": 2048,
         "Name": "murochat-backend",
         "PortMappings": [
          {
           "ContainerPort": 8001,
           "HostPort": 8001,
           "Protocol": "tcp"
          }
         ]
        },
        {
         "Cpu": 2048,
         "DependsOn": [
          {
           "Condition": "HEALTHY",
           "ContainerName": "murochat-backend"
          }
         ],
         "DockerLabels": {
          "com.centurylinklabs.watchtower.enable": "true"
         },
         "Environment": [
          {
           "Name": "DOMAIN_NAME",
           "Value": {
            "Fn::Join": [
             "",
             [
              "{{resolve:secretsmanager:",
              {
               "Ref": "secretsarn"
              },
              ":SecretString:SERVER_NAME::}}"
             ]
            ]
           }
          },
          {
           "Name": "PROTOCOL",
           "Value": "https"
          },
          {
           "Name": "LB_DNS_NAME",
           "Value": {
            "Fn::GetAtt": [
             "murogptlbF10A5BBC",
             "DNSName"
            ]
           }
          }
         ],
         "Essential": true,
         "HealthCheck": {
          "Command": [
           "CMD-SHELL",
           "curl -f http://localhost:80/ || exit 1"
          ],
          "Interval": 30,
          "Retries": 3,
          "Timeout": 5
         },
         "Hostname": "murochat-frontend",
         "Image": "public.ecr.aws/privado/murochat-ui:prod",
         "Links": [
          "murochat-backend"
         ],
         "LogConfiguration": {
          "LogDriver": "awslogs",
          "Options": {
           "awslogs-group": {
            "Ref": "gpttdmurochatfrontendLogGroup461C8A7F"
           },
           "awslogs-stream-prefix": "frontend-logs",
           "awslogs-region": "ap-southeast-1"
          }
         },
         "MemoryReservation": 2048,
         "Name": "murochat-frontend",
         "PortMappings": [
          {
           "ContainerPort": 80,
           "HostPort": 80,
           "Protocol": "tcp"
          }
         ]
        }
       ],
       "ExecutionRoleArn": {
        "Fn::GetAtt": [
         "gpttdExecutionRole35851A6B",
         "Arn"
        ]
       },
       "Family": "murochatmurogptProdmurogptapplicationgpttdD0232712",
       "NetworkMode": "bridge",
       "RequiresCompatibilities": [
        "EC2"
       ],
       "TaskRoleArn": {
        "Fn::GetAtt": [
         "gpttdTaskRoleC84F9DF5",
         "Arn"
        ]
       },
       "Volumes": [
        {
         "EFSVolumeConfiguration": {
          "AuthorizationConfig": {
           "AccessPointId": {
            "Ref": "gptap4925284E"
           }
          },
          "FilesystemId": {
           "Ref": "gptfs2B1951B1"
          },
          "TransitEncryption": "ENABLED"
         },
         "Name": "gpt-volume"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/Resource"
      }
     },
     "gpttdmongodbLogGroup443DFE77": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
       "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/mongodb/LogGroup/Resource"
      }
     },
     "gpttdExecutionRole35851A6B": {
      "Type": "AWS::IAM::Role",
      "Properties": {
       "AssumeRolePolicyDocument": {
        "Statement": [
         {
          "Action": "sts:AssumeRole",
          "Effect": "Allow",
          "Principal": {
           "Service": "ecs-tasks.amazonaws.com"
          }
         }
        ],
        "Version": "2012-10-17"
       }
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/ExecutionRole/Resource"
      }
     },
     "gpttdExecutionRoleDefaultPolicy593FCC7F": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
       "PolicyDocument": {
        "Statement": [
         {
          "Action": [
           "logs:CreateLogStream",
           "logs:PutLogEvents"
          ],
          "Effect": "Allow",
          "Resource": [
           {
            "Fn::GetAtt": [
             "gpttdmongodbLogGroup443DFE77",
             "Arn"
            ]
           },
           {
            "Fn::GetAtt": [
             "gpttdmurochatbackendLogGroup7BDC7CDD",
             "Arn"
            ]
           },
           {
            "Fn::GetAtt": [
             "gpttdmurochatfrontendLogGroup461C8A7F",
             "Arn"
            ]
           }
          ]
         }
        ],
        "Version": "2012-10-17"
       },
       "PolicyName": "gpttdExecutionRoleDefaultPolicy593FCC7F",
       "Roles": [
        {
         "Ref": "gpttdExecutionRole35851A6B"
        }
       ]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/ExecutionRole/DefaultPolicy/Resource"
      }
     },
     "gpttdmurochatbackendLogGroup7BDC7CDD": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
       "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/murochat-backend/LogGroup/Resource"
      }
     },
     "gpttdmurochatfrontendLogGroup461C8A7F": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
       "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/gpt-td/murochat-frontend/LogGroup/Resource"
      }
     },
     "muroserviceServiceD860206C": {
      "Type": "AWS::ECS::Service",
      "Properties": {
       "CapacityProviderStrategy": [
        {
         "CapacityProvider": {
          "Ref": "capacityprovider3257C9FE"
         },
         "Weight": 1
        }
       ],
       "Cluster": {
        "Ref": "murogptcluster7F7C4D91"
       },
       "DeploymentConfiguration": {
        "Alarms": {
         "AlarmNames": [],
         "Enable": false,
         "Rollback": false
        },
        "MaximumPercent": 200,
        "MinimumHealthyPercent": 50
       },
       "EnableECSManagedTags": false,
       "HealthCheckGracePeriodSeconds": 900,
       "LoadBalancers": [
        {
         "ContainerName": "murochat-frontend",
         "ContainerPort": 80,
         "TargetGroupArn": {
          "Ref": "murogptlbhttpLbhttptargetGroup11DD58A4"
         }
        }
       ],
       "SchedulingStrategy": "REPLICA",
       "TaskDefinition": {
        "Ref": "gpttdA3F35940"
       }
      },
      "DependsOn": [
       "gpttdTaskRoleC84F9DF5",
       "murogptlbhttpLbhttptargetGroup11DD58A4",
       "murogptlbhttpLb7BB08EDF"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/muro-service/Service"
      }
     },
     "muroserviceTaskCountTargetC1130879": {
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
      "Properties": {
       "MaxCapacity": 2,
       "MinCapacity": 1,
       "ResourceId": {
        "Fn::Join": [
         "",
         [
          "service/",
          {
           "Ref": "murogptcluster7F7C4D91"
          },
          "/",
          {
           "Fn::GetAtt": [
            "muroserviceServiceD860206C",
            "Name"
           ]
          }
         ]
        ]
       },
       "RoleARN": "arn:aws:iam::325094797840:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
       "ScalableDimension": "ecs:service:DesiredCount",
       "ServiceNamespace": "ecs"
      },
      "DependsOn": [
       "gpttdTaskRoleC84F9DF5"
      ],
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/muro-service/TaskCount/Target/Resource"
      }
     },
     "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
       "Analytics": "v2:deflate64:H4sIAAAAAAAA/31TTW/bMAz9Lb0rXpaednSzrAiQboZt9DowipJwkSVDHymMwP99lOVUTgL0JPLxiSIfqUX2fT7P5k/wYWd8d5pJ3GaXygE/seVeFWCgEU4YVgqrveGCEfHvRfBFdnlveeC8F0tW+K1EXvmtEi5gySq1d6KGrRQJT1hureYIDrX6JAdjtS7C8RvcKzjxAR0rDJ7JTInXisoi+0qIlYxe7qiDYyOUY5Xg3qDrXo327VDDl8BaHYyw9gFfRXgDXvFjLZpWQiz1FumZkGAdcqlhtwUJiqM6nEmtvG1JoqHVDcVehhgJG1JM/SkPrRNq5FztSbwGcyABrn1M3J6Bd9pykPQ6vU1OFZ1P9gMWr9eGRk/YGCo0PTaIewP0DKHJLqWOYx3ORE3WWlkX2iqM3qMM6nCbXZbSWxfbejSX0AIn1enKGXfCTFbEstwe7uPD1XtsxRc12N [...]
      },
      "Metadata": {
       "aws:cdk:path": "muro-chat/murogpt-Prod/murogpt-application/CDKMetadata/Default"
      }
     }
    },
    "Outputs": {
     "HostName": {
      "Value": {
       "Fn::GetAtt": [
        "murogptlbF10A5BBC",
        "DNSName"
       ]
      }
     }
    }
   }
